--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,10 @@
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "exclude": [
+    "supabase/functions/**",
+    "node_modules",
+    "dist"
+  ]
 }
