fix: MCP 서버 v3 업그레이드 + 에이전트 discovery 파일 수정
- MCP 서버: register_agent, create_order, submit_review 도구 추가
- MCP 서버: Supabase 하드코딩 키를 환경변수로 분리
- llms.txt: API URL 플레이스홀더를 실제 값으로 교체
- acp-manifest.json: base_url 플레이스홀더 교체, 이메일 수정
- agents.json, ucp: 카테고리 9개로 확장
- 전체 discovery 파일 이메일 .io → .xyz 통일

--- a/public/.well-known/acp-manifest.json
+++ b/public/.well-known/acp-manifest.json
@@ -8,7 +8,7 @@
         "url": "https://jsonmart.xyz/",
         "country": "KR",
         "currency": "KRW",
-        "support_email": "support@jsonmart.io",
+        "support_email": "support@jsonmart.xyz",
         "merchant_category": "B2B Office Supplies & Consumables"
     },
     "capabilities": {
@@ -21,7 +21,14 @@
             "item_count": 50,
             "categories": [
                 "CONSUMABLES",
-                "MRO"
+                "MRO",
+                "FOOD",
+                "OFFICE",
+                "IT_EQUIPMENT",
+                "KITCHEN",
+                "SAFETY",
+                "HYGIENE",
+                "HOUSEHOLD"
             ]
         },
         "checkout": {
@@ -61,7 +68,7 @@
     },
     "api": {
         "type": "supabase_rpc",
-        "base_url": "https://{project_ref}.supabase.co/rest/v1/rpc/",
+        "base_url": "https://psiysvvcusfyfsfozywn.supabase.co/rest/v1/rpc/",
         "authentication": {
             "required": false,
             "note": "Product feed and checkout are public. Order management requires API key."
