--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -1,13 +1,14 @@
 {
     "name": "jsonmart-mcp-server",
-    "version": "2.0.0",
-    "description": "JSONMart MCP Server for Claude Desktop (local SDK-based)",
+    "version": "3.0.0",
+    "description": "JSONMart MCP Server for Claude Desktop — Agent-Native Marketplace",
     "type": "module",
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
     },
     "dependencies": {
-        "@modelcontextprotocol/sdk": "^1.0.0"
+        "@modelcontextprotocol/sdk": "^1.0.0",
+        "zod": "^3.22.0"
     }
 }
